; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Com_SafeMode.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Com_SafeMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@com_numConsoleLines = common dso_local global i32 0, align 4
@com_consoleLines = common dso_local global i64** null, align 8
@.str = private unnamed_addr constant [5 x i8] c"safe\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"cvar_restart\00", align 1
@qtrue = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Com_SafeMode() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %30, %0
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @com_numConsoleLines, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %33

7:                                                ; preds = %3
  %8 = load i64**, i64*** @com_consoleLines, align 8
  %9 = load i32, i32* %2, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i64*, i64** %8, i64 %10
  %12 = load i64*, i64** %11, align 8
  %13 = call i32 @Cmd_TokenizeString(i64* %12)
  %14 = call i32 @Cmd_Argv(i32 0)
  %15 = call i32 @Q_stricmp(i32 %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %7
  %18 = call i32 @Cmd_Argv(i32 0)
  %19 = call i32 @Q_stricmp(i32 %18, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %29, label %21

21:                                               ; preds = %17, %7
  %22 = load i64**, i64*** @com_consoleLines, align 8
  %23 = load i32, i32* %2, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i64*, i64** %22, i64 %24
  %26 = load i64*, i64** %25, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 0
  store i64 0, i64* %27, align 8
  %28 = load i32, i32* @qtrue, align 4
  store i32 %28, i32* %1, align 4
  br label %35

29:                                               ; preds = %17
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %2, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %2, align 4
  br label %3

33:                                               ; preds = %3
  %34 = load i32, i32* @qfalse, align 4
  store i32 %34, i32* %1, align 4
  br label %35

35:                                               ; preds = %33, %21
  %36 = load i32, i32* %1, align 4
  ret i32 %36
}

declare dso_local i32 @Cmd_TokenizeString(i64*) #1

declare dso_local i32 @Q_stricmp(i32, i8*) #1

declare dso_local i32 @Cmd_Argv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
